--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.10.2",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "next-cloudinary": "^6.2.0",
+    "next-superjson-plugin": "^0.6.3",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
