--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.10.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/lodash": "^4.14.202",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "lodash": "^4.17.21",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "next-cloudinary": "^6.2.0",
@@ -29,7 +31,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-select": "^5.8.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
